Fix spacing issue on email confirmation page

--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/login.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/login.scss
@@ -258,6 +258,13 @@ h1.wp-login-logo {
 			width: 16px;
 		}
 	}
+
+	&.login-action-checkemail {
+
+		.notice {
+			margin-bottom: 55px;
+		}
+	}
 }
 
 .registration .mfp-content #terms-modal,
